Closed
Bug 686278
Opened 14 years ago
Closed 14 years ago
Drop --disable-mailnews
Categories
(MailNews Core :: Build Config, defect)
MailNews Core
Build Config
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 10.0
People
(Reporter: akmalk, Assigned: standard8)
References
Details
Attachments
(2 files)
|
5.12 KB,
patch
|
gozer
:
review+
|
Details | Diff | Splinter Review |
|
524 bytes,
patch
|
standard8
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 6.1; rv:6.0.2) Gecko/20100101 Firefox/6.0.2
Build ID: 20110902133214
Steps to reproduce:
Tried to build seamonkey 2.3.3 with --disable-mailnews flag.
Actual results:
Build fails with the following output:
make[5]: Entering directory `/d/dev2008/mozilla/seamonkey-2.3.3/win-debug/mailnews/base'
/bin/sh /d/dev2008/mozilla/seamonkey-2.3.3/mozilla/build/msys-perl-wrapper /d/dev2008/mozilla/seamon
key-2.3.3/mozilla/build/autoconf/make-makefile -t /d/dev2008/mozilla/seamonkey-2.3.3/mozilla -d ../.
. public/Makefile
creating mailnews/base/public/Makefile
/d/dev2008/mozilla/seamonkey-2.3.3/mozilla/build/autoconf/make-makefile: Cannot read /d/dev2008/mozi
lla/seamonkey-2.3.3/mozilla/mailnews/base/public/Makefile.in: No such file or directory
make[6]: Entering directory `/d/dev2008/mozilla/seamonkey-2.3.3/win-debug/mailnews/base/public'
make[6]: *** No rule to make target `export'. Stop.
make[6]: Leaving directory `/d/dev2008/mozilla/seamonkey-2.3.3/win-debug/mailnews/base/public'
make[5]: *** [public_export] Error 2
make[5]: Leaving directory `/d/dev2008/mozilla/seamonkey-2.3.3/win-debug/mailnews/base'
make[4]: *** [export_tier_platform] Error 2
make[4]: Leaving directory `/d/dev2008/mozilla/seamonkey-2.3.3/win-debug/mozilla'
make[3]: *** [tier_platform] Error 2
make[3]: Leaving directory `/d/dev2008/mozilla/seamonkey-2.3.3/win-debug/mozilla'
make[2]: *** [default] Error 2
make[2]: Leaving directory `/d/dev2008/mozilla/seamonkey-2.3.3/win-debug/mozilla'
make[1]: *** [default] Error 2
make[1]: Leaving directory `/d/dev2008/mozilla/seamonkey-2.3.3/win-debug'
make: *** [build] Error 2
Updated•14 years ago
|
Component: General → Build Config
Product: SeaMonkey → MailNews Core
QA Contact: general → build-config
Version: SeaMonkey 2.3 Branch → unspecified
Comment 1•14 years ago
|
||
Why on earth would we build with mailnews disabled.
Status: UNCONFIRMED → RESOLVED
Closed: 14 years ago
Resolution: --- → INVALID
Comment 2•14 years ago
|
||
(In reply to Ludovic Hirlimann [:Usul] from comment #1)
> Why on earth would we build with mailnews disabled.
In the hope of having a browser-only product behaving more like SeaMonkey and less like Firefox?
This said, personally I prefer the "big economy package" with browser, mailer, chat, DOMi, Venkman, and whatever... but I'm not the reporter.
Comment 3•14 years ago
|
||
If we don't support --disable-mailnews, why is the flag present in the first place?
It should be removed.
Comment 4•14 years ago
|
||
In the XPFE netscape 6/7 days we could choose to have what components were installed or what we wanted built. This unless it is restored to working order which would require the appropriate fall backs and installer fixes it simply doesn't work. It is one of those things that were broken during the transition to the modern toolkit.
Since then it hasn't been given a second thought until recently when it was purposed that it be removed and I made an argument agent it.
Until a final decision is made and the switch removed completely I cannot even believe that this would get a status of RESOLVED INVALID.
| Assignee | ||
Comment 5•14 years ago
|
||
Let's be clear: this is obviously WONTFIX/INVALID for Thunderbird.
Personally I don't see that SeaMonkey needs to support --disable-mailnews now, however that isn't my decision.
Callek: does SeaMonkey really need/want to support -disable-mailnews? If not lets move this to remove --disable-mailnews and make the build system simpler.
Status: RESOLVED → REOPENED
Ever confirmed: true
Product: MailNews Core → SeaMonkey
QA Contact: build-config → build-config
Resolution: INVALID → ---
Comment 6•14 years ago
|
||
I think with the idea of this being broken for so long, and no easy way to support both methods, SeaMonkey has no desire at present to support disabling mailnews.
Updated•14 years ago
|
Status: REOPENED → NEW
Comment 7•14 years ago
|
||
I was compiling with --disable-mailnews in hopes that it would work around Bug 11459 (lack of support for specifying an external mail program). If --disable-mailnews actually worked as intended, what would be the result of clicking on a mailto: link – would SeaMonkey pass the URI to the OS so it could open with the system's default application (as I hoped) or would it just complain about an unsupported protocol?
Comment 8•14 years ago
|
||
Tristan. You don't have to recompile SeaMonkey. Instead do this:
<http://forums.mozillazine.org/viewtopic.php?p=3394638#p3394638>
"In the location bar, type "about:config" and press enter. If you get a scary-looking warning, just click past it. In the "filter" box at the top of the page enter "network.protocol-handler.external.mailto" (without quotes). If you get a result, then just double-click on it to change it true. If you don't, then right-click the pane and select new -> boolean. Give it a name of "network.protocol-handler.external.mailto" (without quotes) and set the value to true. Restart SeaMonkey (including QuickLaunch if you have it enabled) and try clicking a mailto link. It should open in Pegasus/Outlook Express/Mail App/etc.
| Assignee | ||
Comment 9•14 years ago
|
||
Given the comments, I'm going with dropping this option.
We also need to do something with it as when bug 557047 lands, we're going to be broken in as MOZ_MAIL_NEWS wouldn't be defined for the mozilla-central inclusion of bridge.mk, which would break our builds.
Blocks: 557047
Product: SeaMonkey → MailNews Core
QA Contact: build-config → build-config
Summary: --disable-mailnews breaks the build → Drop --disable-mailnews
| Assignee | ||
Comment 10•14 years ago
|
||
Assignee: nobody → mbanner
Status: NEW → ASSIGNED
Attachment #568632 -
Flags: review?(bugspam.Callek)
Updated•14 years ago
|
Flags: in-testsuite-
OS: Windows 7 → All
Hardware: x86 → All
Version: unspecified → Trunk
| Assignee | ||
Updated•14 years ago
|
Attachment #568632 -
Flags: review?(bugspam.Callek) → review?(gozer)
Updated•14 years ago
|
Attachment #568632 -
Flags: review?(gozer) → review+
| Assignee | ||
Comment 11•14 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 14 years ago → 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 10.0
Comment 12•14 years ago
|
||
Comment on attachment 568632 [details] [diff] [review]
Drop --disable-mailnews
Review of attachment 568632 [details] [diff] [review]:
-----------------------------------------------------------------
Ftr, is bug 477845 (negatively) impacted by this support removal?
(I'm thinking about common non SM+TB parts.)
::: suite/shell/src/Makefile.in
@@ +35,5 @@
> endif
> endif
>
> +DEFINES += \
> + -DMOZ_MAIL_NEWS \
(re)Adding -DMOZ_MAIL_NEWS here was unwanted : simple removal was/is fine.
Comment 13•14 years ago
|
||
I guess we'll have to wait for the great "comm-central under mozilla-central" rewrite before we can think about landing standalone composer now.
| Assignee | ||
Comment 14•14 years ago
|
||
(In reply to neil@parkwaycc.co.uk from comment #13)
> I guess we'll have to wait for the great "comm-central under
> mozilla-central" rewrite before we can think about landing standalone
> composer now.
I believe there are ways around that, but I also believe that landing standalone composer hasn't been agreed to anyway.
| Assignee | ||
Comment 16•14 years ago
|
||
Comment on attachment 579082 [details] [diff] [review]
(Bv1-SM) Remove useless '-DMOZ_MAIL_NEWS'
[Checked in: Comment 17]
I'm giving this r+ just because I don't like review requests that are on closed bugs. Those are things that tend to get lost.
Attachment #579082 -
Flags: review?(bugspam.Callek) → review+
Comment 17•14 years ago
|
||
Comment on attachment 579082 [details] [diff] [review]
(Bv1-SM) Remove useless '-DMOZ_MAIL_NEWS'
[Checked in: Comment 17]
http://hg.mozilla.org/comm-central/rev/9256a778fe82
Attachment #579082 -
Attachment description: (Bv1-SM) Remove useless '-DMOZ_MAIL_NEWS' → (Bv1-SM) Remove useless '-DMOZ_MAIL_NEWS'
[Checked in: Comment 17]
You need to log in
before you can comment on or make changes to this bug.
Description
•