Bug 686278 - Drop --disable-mailnews. r=gozer,a=Callek for checkin to CLOSED TREE